--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 											</tr>
 				    						<tr>
 												<td class="text-center" colspan="4">
-													<img src="./Home _ e-Bus Pass_files/MANISH PHOTO20024.jpg" height="250px" width="250px" style="opacity: 65%;"><br>
+													<img src="./Home _ e-Bus Pass_files/IMG_20221103_2123507.jpg" height="250px" width="250px" style="opacity: 65%;"><br>
 													<label style="font-size:20px;"><b>DEEPAK KUMAR</b></label><br>
 													
 														
